# hello-go-openapi

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  main.go  renovate.json
.github/workflows/: apicheck.yaml  build.yaml  main.yaml  releases.yaml
api/: BUILD.bazel  bye.go  hello.go
docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
