load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/tjololo/hello-go-openapi
gazelle(name = "gazelle")

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = [
        "./.git/*",
    ],
    mode = "fix",
)

go_library(
    name = "hello-go-openapi_lib",
    srcs = ["main.go"],
    importpath = "github.com/tjololo/hello-go-openapi",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "app-amd64",
    embed = [":hello-go-openapi_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "app-arm64",
    embed = [":hello-go-openapi_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar-amd64",
    srcs = [":app-amd64"],
)

pkg_tar(
    name = "tar-arm64",
    srcs = [":app-arm64"],
)

oci_image(
    name = "image_amd64",
    base = "@distroless_base_amd64",
    entrypoint = ["/app-amd64"],
    tars = [":tar-amd64"],
)

oci_image(
    name = "image_arm64",
    base = "@distroless_base_arm64",
    entrypoint = ["/app-arm64"],
    tars = [":tar-arm64"],
)

oci_image_index(
    name = "image",
    images = [
        ":image_amd64",
        ":image_arm64",
    ],
)

oci_load(
    name = "load",
    format = "oci",
    image = ":image",
    repo_tags = ["hello-go-api:local"],
)

expand_template(
    name = "stamped",
    out = "_stamped.tags.txt",
    stamp_substitutions = {"0.0.0": "{{BUILD_EMBED_LABEL}}"},
    template = ["0.0.0"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ":stamped",
    repository = "ghcr.io/tjololo/hello-go-openapi",
)
