bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.11.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.0.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_swaggo_files",
    "com_github_swaggo_gin_swagger",
    "com_github_swaggo_swag",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base_amd64",
    digest = "sha256:77830878d4995f05fdcdb8ef5a78021d35d90d173e50d6a607f2751cb902781d",
    image = "gcr.io/distroless/base:nonroot-amd64",
)
oci.pull(
    name = "distroless_base_arm64",
    digest = "sha256:935cc5f6c62e1d175a38a72a1e622b4f03f2aadb22a7f14caa83c90f94433fe9",
    image = "gcr.io/distroless/base:nonroot-arm64",
)
use_repo(
    oci,
    "distroless_base_amd64",
    "distroless_base_arm64",
)
